fix(training): 用持久化会话时钟结算报话学习时长
报话统计改为服务端sessionId和active clock，暂停/恢复/重复结算在用户行锁内幂等；移除客户端totalTime写入，迁移历史行保持不变。验证：RadiotelephoneClock、ReadPathLazyCreateConcurrency、TrainBoundaryGuard和AggregateScoring回归通过，双快照演练通过。跨栈调用面：TelegramApi、军语预习页和wording termTrain同步begin/pause/resume/finish。